Fix Profile: Verification badge is vertically misaligned (#1036)

--- a/src/components/right/RightColumn.scss
+++ b/src/components/right/RightColumn.scss
@@ -65,7 +65,7 @@
 
       .VerifiedIcon {
         margin-left: 0.25rem;
-        margin-top: 0.1rem;
+        margin-bottom: .5rem;
       }
 
       .emoji {
